Release 0.9.7
- add ZMProductAssociation service and related code
- Move zm_token plugin into core
- removed zm_product_associations plugin

Release 0.9.6
- add sanitize parameter to ZMRequest::getParameterMap()
- add form bean code to ZMController
- convert review form to using the new mapping based form handling and
  validation code
- convert contact us form to new form bean stuff; get rid of
  contact_us_success view
- convert tell a friend form to new form bean stuff
- fix product search price filter
- add special case to ZMRequest::getParameter() to handle checkbox form fields
  via a _[name] name
- convert search to using form beans
- remove unused class ZMReceiver
- fix broken redeem coupon; b:#2689552
- fix missing decimalPoint property in currencies; b:#2689542
- convert ZMGVRdeem to form bean
- create proper ZMWebTestCase base class for zm_tests
- converted registration to form bean; requires new versions of phpBB plugins
  as the nickname field name changed
- use ZMBeanUtils::obj2map in ZMValidator to convert form beans to maps
- extend ZMRequiredRule (and the default validation.js) to accept multiple
  names either as array or comma separated string; validation is successfull
	if at least one of the fields is not empty
- remove ZMModel
- split ZMAddressBookProcessController into individual controller
- convert zm_dispatch (and stopre.php) into ZMDispatcher (still needs
  store.php)
- remove ZMRuntime::instance()
- introduce define ZM_BASE_DIR that is going to replace ZM_ROOT in conjunction
  with Zen Cart path defines (DIR_WS_xxx)
- make loader return files per level (accross the scanned tree); this means
  all 2nd level files come before any 3rd level file
- add empty ZMFormBean
- move user types (REGISTERED, GUEST, ANONYMOUS) from ZMAccounts to
  ZMSacsMapper
- another small attribute related optimization reducing SQL queries
- allow the view (ZMView) to control the content type and encoding.
- wrap PDOException in ZMException